--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,15 @@
       "@/*": [
         "./src/*"
       ],
-      "contentlayer/generated": ["./.contentlayer/generated"]
-    }
+      "contentlayer/generated": [
+        "./.contentlayer/generated"
+      ]
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
